syntax = "proto3";
package testdata.stock.v1;
option go_package = "domain";

message StockItemCreated {
    string id = 1;
    string productID = 2;
    int32 qty = 3;
}

message StockItemRemoved {
    string productID = 1;
    int64 removedAt = 2;
}

message StockItemUpdated {
    string productID = 1;
    int32 qty = 2;
}

message StockItemUpdated2 {
    int32 qty = 1;
}
